--- a/nodes/locales/en-US/blynk-iot-in-app.json
+++ b/nodes/locales/en-US/blynk-iot-in-app.json
@@ -2,7 +2,7 @@
     "blynk-iot-in-app": {
         "status": {
             "error": "error",
-            "connecting": "connecting ",
+            "connecting": "connecting...",
             "connected": "connected",
             "disconnected": "disconnected",
             "disabled": "disabled"
