--- a/nodes/locales/en-US/blynk-iot-out-lcd.json
+++ b/nodes/locales/en-US/blynk-iot-out-lcd.json
@@ -2,7 +2,7 @@
     "blynk-iot-out-lcd": {
         "status": {
             "error": "error",
-            "connecting": "connecting ",
+            "connecting": "connecting...",
             "connected-fixed": "connected to pin V",
             "disconnected": "disconnected",
             "disabled": "disabled"
