--- a/nodes/locales/en-US/blynk-iot-out-set-property.json
+++ b/nodes/locales/en-US/blynk-iot-out-set-property.json
@@ -2,7 +2,7 @@
     "blynk-iot-out-set-property": {
         "status": {
             "error": "error",
-            "connecting": "connecting ",
+            "connecting": "connecting...",
             "connected-dynamic": "connected to dynamic pin",
             "connected-fixed": "connected to pin V",
             "disconnected": "disconnected",
