--- a/nodes/locales/en-US/blynk-iot-out-sync.json
+++ b/nodes/locales/en-US/blynk-iot-out-sync.json
@@ -2,7 +2,7 @@
     "blynk-iot-out-sync": {
         "status": {
             "error": "error",
-            "connecting": "connecting ",
+            "connecting": "connecting...",
             "connected-all": "connected to all pin",
             "connected-fixed": "connected to pin V",
             "disconnected": "disconnected",
